<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/whitebluegreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_margin="@dimen/activity_original_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/newaccount_btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_arrow_back"
            app:tint="@color/black" />
        <TextView
            android:layout_marginTop="@dimen/activity_original_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/newaccount_txt_input_phone"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/newaccount_txt_input_phone_info"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="@dimen/activity_original_margin"
            android:padding="@dimen/activity_original_margin"
            android:background="@drawable/back_stroke_black_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_marginTop="4dp"
                android:inputType="number"
                android:maxLines="1"
                android:background="@color/white"
                android:id="@+id/newaccount_etv_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/black"
                android:hint="@string/newaccount_txt_input_phone_number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:textColor="@color/deepdeepdeepgrey"
            android:textSize="14sp"
            android:text="@string/newaccount_txt_sms"/>
        <TextView
            android:id="@+id/newaccount_btn_next"
            android:layout_marginTop="@dimen/activity_original_margin"
            android:textSize="18sp"
            android:padding="10dp"
            android:textColor="@color/white"
            android:background="@drawable/back_blue"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/newaccount_txt_btn_next"/>
    </LinearLayout>

    <TextView
        android:id="@+id/newaccount_btn_alreadyhave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/newaccount_txt_btn_newaccount_already"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>